# bw-claude

./: .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PROXY_USAGE.md  README.md  SOCKS_PROXY_RESEARCH.md  TESTING.md  TODO.md  audit-claude-learn.toml  audit-gemini-learn.toml  bw-claude  bw-gemini  bw_lib.py  learn.toml
bw-claude/: Cargo.toml
bw-claude/src/: main.rs
bw-gemini/: Cargo.toml
bw-gemini/src/: main.rs
bw-relay/: Cargo.toml
bw-relay/src/: http_connect.rs  main.rs
bwrap-core/: Cargo.toml
bwrap-core/src/: args.rs  builtin-policies.toml  config.rs  env.rs  error.rs  lib.rs  mount.rs  network.rs  policy.rs  proxy.rs  sandbox.rs  startup_script.rs
bwrap-core/src/config/: builtin.rs  learning.rs  loader.rs  mod.rs  resolver.rs  sandbox.rs  schema.rs
bwrap-proxy/: Cargo.toml
bwrap-proxy/src/: builtin-policies.toml  error.rs  lib.rs  main.rs
bwrap-proxy/src/config/: loader.rs  mod.rs  schema.rs  validator.rs
bwrap-proxy/src/filter/: learning.rs  learning_recorder_trait.rs  matcher.rs  mod.rs  policy.rs
bwrap-proxy/src/proxy/: mod.rs  server.rs
examples/: proxy-config.toml
python/: bw-claude.py
rust/crates/bw-claude/src/: main.rs
rust/crates/bw-gemini/src/: main.rs
rust/crates/bwrap-proxy/: Cargo.toml
