[package]
name = "bw-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "bw-claude"
path = "src/main.rs"

[dependencies]
bwrap-core = { workspace = true }
bwrap-proxy = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
