[package]
name = "bwrap-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
chrono = { workspace = true }
bwrap-proxy = { path = "../bwrap-proxy" }

[dev-dependencies]
tempfile = "3.14"
