[package]
name = "bwrap-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "bwrap_proxy"
path = "src/lib.rs"

[[bin]]
name = "bwrap-proxy"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# SOCKS5 and filtering
fast-socks5 = { workspace = true }
ipnet = { workspace = true }
wildmatch = { workspace = true }

# Configuration
toml = { workspace = true }
serde = { workspace = true }

# Utilities
tokio-util = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
