[package]
name = "bwrap-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "bwrap_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# Filtering
ipnet = { workspace = true }
wildmatch = { workspace = true }

# Configuration
toml = { workspace = true }
serde = { workspace = true }

# Utilities
tokio-util = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
