[package]
name = "bwrap-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "bwrap-proxy"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# TODO: Add fast-socks5 or similar for SOCKS5 proxy implementation
